Changed support email

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="stay-with">
 					<div class="stay-with-head">
 						<h3>Stay with us</h3>
-						<p>You can also email us at <a href="#">support@yourdomin.in.</a> Gald to help</p>
+						<p>You can also email us at <a href="#">support@brainspeedgame.com</a> Gald to help</p>
 					</div>
 					<div class="social-icons">
 						<ul>
