--- a/index.html
+++ b/index.html
@@ -158,20 +158,29 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="img-cursual">
 						<div id="owl-demo" class="owl-carousel">
 			                <div class="item"><img class="lazyOwl" data-src="images/screen1.png" alt="Lazy Owl Image"></div>
-			                <div class="item"><img class="lazyOwl" data-src="images/screen3.png" alt="Lazy Owl Image"></div>
 			                <div class="item"><img class="lazyOwl" data-src="images/screen2.png" alt="Lazy Owl Image"></div>
+			                <div class="item"><img class="lazyOwl" data-src="images/screen3.png" alt="Lazy Owl Image"></div>
+			                <div class="item"><img class="lazyOwl" data-src="images/screen4.png" alt="Lazy Owl Image"></div>
 			                <div class="item"><img class="lazyOwl" data-src="images/screen1.png" alt="Lazy Owl Image"></div>
-			                <div class="item"><img class="lazyOwl" data-src="images/screen3.png" alt="Lazy Owl Image"></div>
 			                <div class="item"><img class="lazyOwl" data-src="images/screen2.png" alt="Lazy Owl Image"></div>
+			                <div class="item"><img class="lazyOwl" data-src="images/screen3.png" alt="Lazy Owl Image"></div>
+			                <div class="item"><img class="lazyOwl" data-src="images/screen4.png" alt="Lazy Owl Image"></div>
 			                <div class="item"><img class="lazyOwl" data-src="images/screen1.png" alt="Lazy Owl Image"></div>
-			                <div class="item"><img class="lazyOwl" data-src="images/screen3.png" alt="Lazy Owl Image"></div>
 			                <div class="item"><img class="lazyOwl" data-src="images/screen2.png" alt="Lazy Owl Image"></div>
+			                <div class="item"><img class="lazyOwl" data-src="images/screen3.png" alt="Lazy Owl Image"></div>
+			                <div class="item"><img class="lazyOwl" data-src="images/screen4.png" alt="Lazy Owl Image"></div>
 			                <div class="item"><img class="lazyOwl" data-src="images/screen1.png" alt="Lazy Owl Image"></div>
-			                <div class="item"><img class="lazyOwl" data-src="images/screen3.png" alt="Lazy Owl Image"></div>
 			                <div class="item"><img class="lazyOwl" data-src="images/screen2.png" alt="Lazy Owl Image"></div>
+			                <div class="item"><img class="lazyOwl" data-src="images/screen3.png" alt="Lazy Owl Image"></div>
+			                <div class="item"><img class="lazyOwl" data-src="images/screen4.png" alt="Lazy Owl Image"></div>
 			                <div class="item"><img class="lazyOwl" data-src="images/screen1.png" alt="Lazy Owl Image"></div>
-			                <div class="item"><img class="lazyOwl" data-src="images/screen3.png" alt="Lazy Owl Image"></div>
 			                <div class="item"><img class="lazyOwl" data-src="images/screen2.png" alt="Lazy Owl Image"></div>
+			                <div class="item"><img class="lazyOwl" data-src="images/screen3.png" alt="Lazy Owl Image"></div>
+			                <div class="item"><img class="lazyOwl" data-src="images/screen4.png" alt="Lazy Owl Image"></div>
+			                <div class="item"><img class="lazyOwl" data-src="images/screen1.png" alt="Lazy Owl Image"></div>
+			                <div class="item"><img class="lazyOwl" data-src="images/screen2.png" alt="Lazy Owl Image"></div>
+			                <div class="item"><img class="lazyOwl" data-src="images/screen3.png" alt="Lazy Owl Image"></div>
+			                <div class="item"><img class="lazyOwl" data-src="images/screen4.png" alt="Lazy Owl Image"></div>			                
 		               </div>
 				</div>		
 			   </div>
@@ -181,16 +190,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			     		<div class="wrap">
 			     			  <div class="slider single-item">
 								<div>
-									<p>"This game has changed my life. I started to think so fast that sometimes I feel like a super computer!"</p>
-									<h3>Thomas, Buenos Aires</h3>							
+									<p>"I am an operation center manager, so I have to make a lot of fast decisions. It is not easy, but this game helps me to train this ability!"</p>
+									<h3>Matthew, New York</h3>							
 								</div>
 								<div>
 									<p>"It's so cool! Just a perfect way to relax and distract yourself from daily routine."</p>
-									<h3>Julius, Helsinki</h3>
+									<h3>Emily, Chicago</h3>												
 							   </div>
 								<div>
 									<p>"It really hooked me. I like to see that my BSI is among the top players. Thus I try to play it at least 10 minutes every day."</p>
-							        <h3>"Roberto, Milan</h3>
+							        <h3>Jacob, Houston</h3>		
 							    </div>
 							</div>	 			
 					</div>			      	
@@ -200,7 +209,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	   
 				<div class="stay-with">
 					<div class="stay-with-head">
-						<h3>We want to hear your comments and suggestions.</h3>
+						<h3>We want to hear your comments and suggestions!</h3>
 						<p>Please contact us by email <a href="#">support@brainspeedgame.com</a></p>
 					</div>
 
