--- a/index.html
+++ b/index.html
@@ -13,6 +13,38 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-60727976-1', 'auto');
+	  ga('send', 'pageview');
+
+	</script>
+
+
+<link rel="apple-touch-icon" sizes="57x57" href="favicons/apple-touch-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="favicons/apple-touch-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="favicons/apple-touch-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="favicons/apple-touch-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="favicons/apple-touch-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="favicons/apple-touch-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="favicons/apple-touch-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="favicons/apple-touch-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon-180x180.png">
+<link rel="icon" type="image/png" href="favicons/favicon-32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="favicons/android-chrome-192x192.png" sizes="192x192">
+<link rel="icon" type="image/png" href="favicons/favicon-96x96.png" sizes="96x96">
+<link rel="icon" type="image/png" href="favicons/favicon-16x16.png" sizes="16x16">
+<link rel="manifest" href="favicons/manifest.json">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="msapplication-TileImage" content="favicons/mstile-144x144.png">
+<meta name="theme-color" content="#ffffff">
+
+
 <script src="js/jquery-1.10.2.min.js" type="text/javascript"></script>
 <script type="text/javascript" src="js/move-top.js"></script>
 	<script type="text/javascript" src="js/easing.js"></script>
@@ -89,9 +121,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<div class="logo">
 								<a href="index.html"><img src="images/logo.gif" alt="" /></a>
 							</div>
-							<h3>Brain Speed is an educational game that helps to improve your ability to think fast. Train your brain and keep them fit!</h3>
+							<h3>Brain Speed is an educational game that helps to improve your ability to think fast. Train your brain and keep it fit!</h3>
 							<div class="download-social-container">
-								<a class="iapps" href=""></a>
+								<a class="iapps" href=""><img src="images/button.png" alt="" /></a>
 								<div class="download-social">
 									<a class="twitter" data-tooltip="Twitter" target="_blank" href="https://twitter.com/brain_speed"> </a>
 									<a class="face" data-tooltip="Facebook" target="_blank" href="https://www.facebook.com/brainspeedgame"></a>
@@ -154,7 +186,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 		  <!-- Download Button  -->
 		     <div class="content-middle" id="section-3">
-			     <div class="wrap">
+			    <div class="wrap">
 				<div class="img-cursual">
 						<div id="owl-demo" class="owl-carousel">
 			                <div class="item"><img class="lazyOwl" data-src="images/screen1.png" alt="Lazy Owl Image"></div>
@@ -180,7 +212,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			                <div class="item"><img class="lazyOwl" data-src="images/screen1.png" alt="Lazy Owl Image"></div>
 			                <div class="item"><img class="lazyOwl" data-src="images/screen2.png" alt="Lazy Owl Image"></div>
 			                <div class="item"><img class="lazyOwl" data-src="images/screen3.png" alt="Lazy Owl Image"></div>
-			                <div class="item"><img class="lazyOwl" data-src="images/screen4.png" alt="Lazy Owl Image"></div>			                
+			                <div class="item"><img class="lazyOwl" data-src="images/screen4.png" alt="Lazy Owl Image"></div>
 		               </div>
 				</div>		
 			   </div>
@@ -250,16 +282,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</script>
        <a href="#" id="toTop"> <span id="toTopHover"></span> </a>
 	   
-	   	<script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-	  ga('create', 'UA-60727976-1', 'auto');
-	  ga('send', 'pageview');
-
-	</script>
   </body>
 </html>
 
