--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<div class="logo">
 								<a href="index.html"><img src="images/logo.gif" alt="" /></a>
 							</div>
-							<h3>Brain Speed is an educational game that helps to improve your ability to think fast. Train your brain and keep it fit!</h3>
+							<h3>Brain Speed is an educational game that helps to improve your ability to think fast. Train your brain and keep them fit!</h3>
 							<div class="download-social-container">
 								<a class="iapps" href=""><img src="images/button.png" alt="" /></a>
 								<div class="download-social">
