--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<div class="logo">
 								<a href="index.html"><img src="images/logo.gif" alt="" /></a>
 							</div>
-							<h3>Brain Speed is an educational game that helps to improve your ability to think fast. Train your brain and keep them fit!</h3>
+							<h3>Brain Speed is an educational game that helps to improve your ability to think fast. Train your brain and keep it fit!</h3>
 							<div class="download-social-container">
 								<a class="iapps" href=""><img src="images/button.png" alt="" /></a>
 								<div class="download-social">
@@ -144,9 +144,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	    <div class="features" id="section-2">
 	       <div class="wrap">
 		        <h2>About</h2>
-				<p>Brain Speed is an educational game that helps to improve your ability to think fast. The rules are simple, but it is not so easy to the reach the highest levels. Speed of thinking is very important in your professional life, sports and other areas. Your brain’s innate neuroplasticity allows you to develop this ability. Scientists say that brain can be compared with the muscle, the more you train them, the stronger they become. Brain Speed is a perfect tool to train your brain and keep them fit. At the same time the game can be fun and a good way to relax during your lunch break or after a busy day.</p>
+				<p>Speed of thinking is very important in professional life, in sport and in other areas. Your brain’s innate neuroplasticity allows you to develop this ability. Scientists say that the brain can be compared to a muscle, the more you train it, the stronger it becomes. <span style="font-weight:bold">Brain Speed is the perfect tool to train your brain and keep it fit.</span> At the same time the game is fun and a good way to relax during your lunch break or after a busy day.</p>
 				<br>
-				<p>The purpose of the game is to find the sequences of numbers as fast as you can! On each level sequences, shapes, colors and arrangement of numbers are different. Each level of the game is more difficult than the last one. This will keep you challenged! There are single player and two player modes in the game.</p>
+				<p><span style="font-weight:bold">The purpose of the game is to find sequences of numbers as fast as you can!</span> On each level the sequences, shapes, colors and arrangement of the numbers are different. Each level of the game is more difficult than the previous one. This will keep you challenged! There are single player and two player modes in the game.</p>
 
 				<div class="features-list">
 				 
@@ -157,7 +157,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</div>
 						<div class="dc-head-info">
 							<h3>Single player</h3>
-							<p>Single player is designed for individual brain speed training. The main indicator of how good you perform and progress in this mode is your Brain Speed Index (BSI). It is calculated according to the best completion times of each level. If you manage to pass all levels of the game you can still keep on training. This means that if you beat your best time of the level you have already passed, your general BSI will still increase. It is very interesting to compare your performance with other Brain Speed players around the world. Just click the icon of the leaderboard and you will see your global ranking according to your BSI.</p>
+							<p>Single player is designed for individual brain speed training. The main indicator of how good you perform and progress in this mode is your Brain Speed Index (BSI). It is calculated according to the best completion times of each level. If you manage to pass all levels of the game you can still keep on training. This means that if you beat your best time of the level you have already passed, your general BSI will still increase. It is very interesting to compare your performance with other Brain Speed players around the world.</p>
 						</div>
 						<div class="clear"> </div>
 					</div>
@@ -169,7 +169,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</div>
 						<div class="dc-head-info">
 							<h3>Two player</h3>
-							<p>In a two player (duel) mode, you can play online with other players from all around the world. In this mode you have to find the sequences of numbers faster than your opponents. Both players start the same level and play until one of the players finds all the numbers. You can either play with the particular person or the platform can randomly choose the opponent for you. Success in this mode depends only on the number of victories you manage to achieve. If you want to compare your performance, just click the icon of the leaderboard and you will see your global ranking according to your victories in this mode.</p>
+							<p>In a two player (duel) mode, you can play online with other players from all around the world. In this mode you have to find the sequences of numbers faster than your opponents. Both players start the same level and play until one of the players finds all the numbers. You can either play with the particular person or the platform can randomly choose the opponent for you. Success in this mode depends only on the number of victories you manage to achieve.</p>
 						</div>
 						<div class="clear"> </div>
 					</div>
@@ -241,8 +241,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	   
 				<div class="stay-with">
 					<div class="stay-with-head">
-						<h3>We want to hear your comments and suggestions!</h3>
-						<p>Please contact us by email <a href="#">support@brainspeedgame.com</a></p>
+						<br><br>
+						<p><span style="font-weight:bold">We want to hear your comments and suggestions!</span><br>
+						Please contact us by email <a href="#">support@brainspeedgame.com</a></p>
 					</div>
 
 				</div>
