--- a/index.html
+++ b/index.html
@@ -193,26 +193,32 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			                <div class="item"><img class="lazyOwl" data-src="images/screen2.png" alt="Lazy Owl Image"></div>
 			                <div class="item"><img class="lazyOwl" data-src="images/screen3.png" alt="Lazy Owl Image"></div>
 			                <div class="item"><img class="lazyOwl" data-src="images/screen4.png" alt="Lazy Owl Image"></div>
+			                <div class="item"><img class="lazyOwl" data-src="images/screen5.png" alt="Lazy Owl Image"></div>
 			                <div class="item"><img class="lazyOwl" data-src="images/screen1.png" alt="Lazy Owl Image"></div>
 			                <div class="item"><img class="lazyOwl" data-src="images/screen2.png" alt="Lazy Owl Image"></div>
 			                <div class="item"><img class="lazyOwl" data-src="images/screen3.png" alt="Lazy Owl Image"></div>
 			                <div class="item"><img class="lazyOwl" data-src="images/screen4.png" alt="Lazy Owl Image"></div>
+			                <div class="item"><img class="lazyOwl" data-src="images/screen5.png" alt="Lazy Owl Image"></div>
 			                <div class="item"><img class="lazyOwl" data-src="images/screen1.png" alt="Lazy Owl Image"></div>
 			                <div class="item"><img class="lazyOwl" data-src="images/screen2.png" alt="Lazy Owl Image"></div>
 			                <div class="item"><img class="lazyOwl" data-src="images/screen3.png" alt="Lazy Owl Image"></div>
 			                <div class="item"><img class="lazyOwl" data-src="images/screen4.png" alt="Lazy Owl Image"></div>
+			                <div class="item"><img class="lazyOwl" data-src="images/screen5.png" alt="Lazy Owl Image"></div>
 			                <div class="item"><img class="lazyOwl" data-src="images/screen1.png" alt="Lazy Owl Image"></div>
 			                <div class="item"><img class="lazyOwl" data-src="images/screen2.png" alt="Lazy Owl Image"></div>
 			                <div class="item"><img class="lazyOwl" data-src="images/screen3.png" alt="Lazy Owl Image"></div>
 			                <div class="item"><img class="lazyOwl" data-src="images/screen4.png" alt="Lazy Owl Image"></div>
+			                <div class="item"><img class="lazyOwl" data-src="images/screen5.png" alt="Lazy Owl Image"></div>
 			                <div class="item"><img class="lazyOwl" data-src="images/screen1.png" alt="Lazy Owl Image"></div>
 			                <div class="item"><img class="lazyOwl" data-src="images/screen2.png" alt="Lazy Owl Image"></div>
 			                <div class="item"><img class="lazyOwl" data-src="images/screen3.png" alt="Lazy Owl Image"></div>
 			                <div class="item"><img class="lazyOwl" data-src="images/screen4.png" alt="Lazy Owl Image"></div>
+			                <div class="item"><img class="lazyOwl" data-src="images/screen5.png" alt="Lazy Owl Image"></div>
 			                <div class="item"><img class="lazyOwl" data-src="images/screen1.png" alt="Lazy Owl Image"></div>
 			                <div class="item"><img class="lazyOwl" data-src="images/screen2.png" alt="Lazy Owl Image"></div>
 			                <div class="item"><img class="lazyOwl" data-src="images/screen3.png" alt="Lazy Owl Image"></div>
 			                <div class="item"><img class="lazyOwl" data-src="images/screen4.png" alt="Lazy Owl Image"></div>
+			                <div class="item"><img class="lazyOwl" data-src="images/screen5.png" alt="Lazy Owl Image"></div>
 		               </div>
 				</div>		
 			   </div>
