--- a/index.html
+++ b/index.html
@@ -229,15 +229,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			     			  <div class="slider single-item">
 								<div>
 									<p>"I am an operation center manager, so I have to make a lot of fast decisions. It is not easy, but this game helps me to train this ability!"</p>
-									<h3>Matthew, New York</h3>							
+									<h3>Matthew, Chicago</h3>							
 								</div>
 								<div>
 									<p>"It's so cool! Just a perfect way to relax and distract yourself from daily routine."</p>
-									<h3>Emily, Chicago</h3>												
+									<h3>Emily, Toronto</h3>												
 							   </div>
 								<div>
 									<p>"It really hooked me. I like to see that my BSI is among the top players. Thus I try to play it at least 10 minutes every day."</p>
-							        <h3>Jacob, Houston</h3>		
+							        <h3>Haruto, Nagoya</h3>		
 							    </div>
 							</div>	 			
 					</div>			      	
