--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	   <h1 class="title"><span>Brain Speed</span></h1>
 			 <div class="cssmenu">
 				<ul id="nav">
-					 <li><a href="#section-2" class="scroll">About</a></li>
-					  <li><a href="#section-3" class="scroll">Screenshots</a></li>
-					 <li><a href="#section-4" class="scroll">Testimonials</a></li>
-				     <li><a href="#section-5" class="scroll">Contacts</a></li>
+					 <li><a href="#section-2" class="scroll" onClick="ga('send', 'event', 'Meniu', 'Paspaudimas');">About</a></li>
+					 <li><a href="#section-3" class="scroll" onClick="ga('send', 'event', 'Meniu', 'Paspaudimas');">Screenshots</a></li>
+					 <li><a href="#section-4" class="scroll" onClick="ga('send', 'event', 'Meniu', 'Paspaudimas');">Testimonials</a></li>
+				     <li><a href="#section-5" class="scroll" onClick="ga('send', 'event', 'Meniu', 'Paspaudimas');">Contacts</a></li>
 				</ul>
 		    </div>
 		    <div class="clear"></div>
@@ -123,7 +123,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</div>
 							<h3>Brain Speed is an educational game that helps to improve your ability to think fast. Train your brain and keep it fit!</h3>
 							<div class="download-social-container">
-								<a class="iapps" href=""><img src="images/button.png" alt="" /></a>
+								<a class="iapps" href="" onClick="ga('send', 'event', 'Appstore', 'Paspaudimas');"><img src="images/button.png" alt="" / ></a>
 								<div class="download-social">
 									<a class="twitter" data-tooltip="Twitter" target="_blank" href="https://twitter.com/brain_speed"> </a>
 									<a class="face" data-tooltip="Facebook" target="_blank" href="https://www.facebook.com/brainspeedgame"></a>
