--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							<div class="download-social-container">
 								<a class="iapps" href="" onClick="ga('send', 'event', 'Appstore', 'Paspaudimas');"><img src="images/button.png" alt="" / ></a>
 								<div class="download-social">
-									<a class="twitter" data-tooltip="Twitter" target="_blank" href="https://twitter.com/brain_speed"> </a>
-									<a class="face" data-tooltip="Facebook" target="_blank" href="https://www.facebook.com/brainspeedgame"></a>
+									<a class="twitter" data-tooltip="Twitter" target="_blank" href="https://twitter.com/brain_speed" onClick="ga('send', 'event', 'TW', 'Paspaudimas');"> </a>
+									<a class="face" data-tooltip="Facebook" target="_blank" href="https://www.facebook.com/brainspeedgame" onClick="ga('send', 'event', 'FB', 'Paspaudimas');"></a>
 								</div>
 							</div>
 					</div>
