--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Brain Speed Game</title>
+<title>Brain Speed – Game and Brain Trainer for all iOS Devices</title>
+<meta name="description" content="It is an educational game that helps to improve your ability to think fast. Train your brain and keep it fit! The purpose of the game is to find sequences of numbers as fast as you can!"/>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
@@ -119,7 +120,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<div class="img-banner-info">
 							
 							<div class="logo">
-								<a href="index.html"><img src="images/logo.gif" alt="" /></a>
+								<img src="images/logo.gif" alt="" />
 							</div>
 							<h3>Brain Speed is an educational game that helps to improve your ability to think fast. Train your brain and keep it fit!</h3>
 							<div class="download-social-container">
@@ -249,7 +250,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="stay-with-head">
 						<br><br>
 						<p><span style="font-weight:bold">We want to hear your comments and suggestions!</span><br>
-						Please contact us by email <a href="#">support@brainspeedgame.com</a></p>
+						Please contact us by email <a href="mailto:support@brainspeedgame.com" onClick="ga('send', 'event', 'Email', 'Paspaudimas');">support@brainspeedgame.com</a><br>
+						Download our <a href="files/brain_speed_press_kit.zip" target="_blank" onClick="ga('send', 'event', 'Presskit', 'Atsiuntimas');">Press Kit (.zip)</a></p>
 					</div>
 
 				</div>
