--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Brain Speed – Game and Brain Trainer for all iOS Devices</title>
+<title>Brain Speed – Game and Brain Trainer for iOS Devices</title>
 <meta name="description" content="It is an educational game that helps to improve your ability to think fast. Train your brain and keep it fit! The purpose of the game is to find sequences of numbers as fast as you can!"/>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -124,7 +124,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 							</div>
 							<h3>Brain Speed is an educational game that helps to improve your ability to think fast. Train your brain and keep it fit!</h3>
 							<div class="download-social-container">
-								<a class="iapps" href="https://itunes.apple.com/us/app/brain-speed-find-sequences/id922113291?ls=1&mt=8" onClick="ga('send', 'event', 'Appstore', 'Paspaudimas');"><img src="images/button.png" alt="" / ></a>
+								<a class="iapps" target="_blank" href="https://itunes.apple.com/us/app/brain-speed-find-sequences/id922113291?ls=1&mt=8" onClick="ga('send', 'event', 'Appstore', 'Paspaudimas');"><img src="images/button.png" alt="" / ></a>
 								<div class="download-social">
 									<a class="twitter" data-tooltip="Twitter" target="_blank" href="https://twitter.com/brain_speed" onClick="ga('send', 'event', 'TW', 'Paspaudimas');"> </a>
 									<a class="face" data-tooltip="Facebook" target="_blank" href="https://www.facebook.com/brainspeedgame" onClick="ga('send', 'event', 'FB', 'Paspaudimas');"></a>
