--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Brain Speed – Game and Brain Trainer for iOS Devices</title>
-<meta name="description" content="It is an educational game that helps to improve your ability to think fast. Train your brain and keep it fit! The purpose of the game is to find sequences of numbers as fast as you can!"/>
+<title>Brain Speed – Free Brain Trainer Game for iOS Devices</title>
+<meta name="description" content="It is an educational game that helps to improve your ability to think fast. At the same time, the game is fun and a good way to relax. Train your brain and keep it fit!"/>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
@@ -145,9 +145,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	    <div class="features" id="section-2">
 	       <div class="wrap">
 		        <h2>About</h2>
-				<p>Speed of thinking is very important in professional life, in sport and in other areas. Your brain’s innate neuroplasticity allows you to develop this ability. Scientists say that the brain can be compared to a muscle, the more you train it, the stronger it becomes. <span style="font-weight:bold">Brain Speed is the perfect tool to train your brain and keep it fit.</span> At the same time the game is fun and a good way to relax during your lunch break or after a busy day.</p>
-				<br>
-				<p><span style="font-weight:bold">The purpose of the game is to find sequences of numbers as fast as you can!</span> On each level the sequences, shapes, colors and arrangement of the numbers are different. Each level of the game is more difficult than the previous one. This will keep you challenged! There are single player and two player modes in the game.</p>
+				<p>Speed of thinking is very important in professional life, in sport and in other areas. The brain's innate neuroplasticity allows you to develop this ability. Scientists say that the brain can be compared to a muscle, the more it is trained, the stronger it becomes.<span style="font-weight:bold"> Brain Speed is a perfect tool to train your brain and keep it fit. </span>At the same time the game is fun, and a good way to relax during a lunch break or after a busy day.</p>	 
+ 				<br>
+				<p><span style="font-weight:bold">The rules of the game are very simple – you just need to tap the numbers, in order, as fast as you can.</span> Numbers come in a variety of shapes, colors, arrangements and motion patterns. Each level of the game is more difficult than the previous one. This will keep you challenged and not bored!</p>
 
 				<div class="features-list">
 				 
