--- a/app/register.html
+++ b/app/register.html
@@ -27,15 +27,15 @@
             </div>
             <h3>Register to IN+</h3>
             <p>Create account to see it in action.</p>
-            <form class="m-t" role="form" action="login.html">
+            <form class="m-t" role="form" action="javascript:register();">
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Name" required="">
+                    <input type="text" id="register-username" class="form-control" placeholder="Name" required="">
                 </div>
                 <div class="form-group">
-                    <input type="email" class="form-control" placeholder="Email" required="">
+                    <input type="email" id="register-email" class="form-control" placeholder="Email" required="">
                 </div>
                 <div class="form-group">
-                    <input type="password" class="form-control" placeholder="Password" required="">
+                    <input type="password" id="register-password" class="form-control" placeholder="Password" required="">
                 </div>
                 <div class="form-group">
                         <div class="checkbox i-checks"><label> <input type="checkbox"><i></i> Agree the terms and policy </label></div>
@@ -62,6 +62,10 @@
             });
         });
     </script>
+
+    <script src="http://www.parsecdn.com/js/parse-latest.js"></script>
+    <script src="js/custom/parsehelper.js"></script>
+
 </body>
 
 </html>
