--- a/app/login.html
+++ b/app/login.html
@@ -31,9 +31,9 @@
             </p>
             <p>Login in. To see it in action.</p>
             <form class="m-t" role="form" action="javascript:logIn();">
-                <div class="error" style="display:none"></div>
+                <div class="error"  style="display:none; color: #ed5565;"></div>
                 <div class="form-group">
-                    <input type="email" id="login-username" class="form-control" placeholder="Username" required="">
+                    <input type="email" id="login-username" class="form-control" placeholder="Email" required="">
                 </div>
                 <div class="form-group">
                     <input type="password" id="login-password" class="form-control" placeholder="Password" required="">
