--- a/app/register.html
+++ b/app/register.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>INSPINIA | Register</title>
+    <title>drop2books | Register</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
@@ -22,12 +22,13 @@
         <div>
             <div>
 
-                <h1 class="logo-name">IN+</h1>
+                <h1 class="logo-name">d2b</h1>
 
             </div>
-            <h3>Register to IN+</h3>
+            <h3>Register to drop2books</h3>
             <p>Create account to see it in action.</p>
             <form class="m-t" role="form" action="javascript:register();">
+                <div class="error" style="display:none; color: #ed5565;"></div>
                 <div class="form-group">
                     <input type="text" id="register-username" class="form-control" placeholder="Name" required="">
                 </div>
@@ -38,7 +39,7 @@
                     <input type="password" id="register-password" class="form-control" placeholder="Password" required="">
                 </div>
                 <div class="form-group">
-                        <div class="checkbox i-checks"><label> <input type="checkbox"><i></i> Agree the terms and policy </label></div>
+                        <div class="checkbox i-checks"><label> <input type="checkbox" required=""><i></i> Agree the terms and policy </label></div>
                 </div>
                 <button type="submit" class="btn btn-primary block full-width m-b">Register</button>
 
