--- a/app/login.html
+++ b/app/login.html
@@ -38,7 +38,7 @@
                 <div class="form-group">
                     <input type="password" id="login-password" class="form-control" placeholder="Password" required="">
                 </div>
-                <button type="submit" class="btn btn-primary block full-width m-b" onclick="validate()">Login</button>
+                <button type="submit" class="btn btn-primary block full-width m-b">Login</button>
 
                 <a href="#"><small>Forgot password?</small></a>
                 <p class="text-muted text-center"><small>Do not have an account?</small></p>
