Expenses view table and preview

--- a/app/index.html
+++ b/app/index.html
@@ -41,9 +41,11 @@
 <script src="js/plugins/jquery-ui/jquery-ui.js"></script>
 <script src="js/bootstrap/bootstrap.min.js"></script>
 
-<!-- Parse backend and helper -->
+<!-- TMA: Parse backend and helper -->
+<script src="js/plugins/accounting/accounting.min.js"></script>
 <script src="http://www.parsecdn.com/js/parse-latest.js"></script>
-<script src="js/custom/parsehelper.js"></script>
+<script src="js/drop2books/parsehelper.js"></script>
+
 
 <!-- MetsiMenu -->
 <script src="js/plugins/metisMenu/jquery.metisMenu.js"></script>
