--- a/app/login.html
+++ b/app/login.html
@@ -53,7 +53,7 @@
     <script src="js/bootstrap/bootstrap.min.js"></script>
 
     <script src="http://www.parsecdn.com/js/parse-latest.js"></script>
-    <script src="js/custom/parsehelper.js"></script>
+    <script src="js/drop2books/parsehelper.js"></script>
 </body>
 
 </html>
