--- a/app/register.html
+++ b/app/register.html
@@ -65,7 +65,7 @@
     </script>
 
     <script src="http://www.parsecdn.com/js/parse-latest.js"></script>
-    <script src="js/custom/parsehelper.js"></script>
+    <script src="js/drop2books/parsehelper.js"></script>
 
 </body>
 
