--- a/_old_javascript_app/form_advanced.html
+++ b/_old_javascript_app/form_advanced.html
@@ -2106,14 +2106,24 @@
                 autoclose: true
             });
 
-            $('#data_2 .input-group.date').datepicker({
-                startView: 1,
-                todayBtn: "linked",
-                keyboardNavigation: false,
-                forceParse: false,
-                autoclose: true,
-                format: "dd/mm/yyyy"
-            });
+            var aaa = $('#data_2 .input-group.date');
+            // aaa.datepicker({
+            //     startView: 1,
+            //     todayBtn: "linked",
+            //     keyboardNavigation: false,
+            //     forceParse: false,
+            //     autoclose: true,
+            //     format: "dd/mm/yyyy"
+            // });
+            
+            // $('#data_2 .input-group.date').datepicker({
+            //     startView: 1,
+            //     todayBtn: "linked",
+            //     keyboardNavigation: false,
+            //     forceParse: false,
+            //     autoclose: true,
+            //     format: "dd/mm/yyyy"
+            // });
 
             $('#data_3 .input-group.date').datepicker({
                 startView: 2,
