--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,7 @@
 <script src="js/bootstrap/bootstrap.min.js"></script>
 
 <!-- TMA: Parse backend and helper -->
+<script src="js/plugins/moment/moment.min.js"></script>
 <script src="js/plugins/accounting/accounting.min.js"></script>
 <script src="http://www.parsecdn.com/js/parse-latest.js"></script>
 <script src="js/drop2books/parsehelper.js"></script>
