Everything moved to Firebase

--- a/app/index.html
+++ b/app/index.html
@@ -44,9 +44,10 @@
 <!-- TMA: Parse backend and helper -->
 <script src="js/plugins/moment/moment.min.js"></script>
 <script src="js/plugins/accounting/accounting.min.js"></script>
-<script src="http://www.parsecdn.com/js/parse-latest.js"></script>
-<script src="js/drop2books/parsehelper.js"></script>
 
+<!-- Firebase -->
+<script src="https://www.gstatic.com/firebasejs/3.5.1/firebase.js"></script>
+<script src="js/drop2books/firebase-helper.js"></script>
 
 <!-- MetsiMenu -->
 <script src="js/plugins/metisMenu/jquery.metisMenu.js"></script>
@@ -72,6 +73,9 @@
 <script src="js/config.js"></script>
 <script src="js/directives.js"></script>
 <script src="js/controllers.js"></script>
+
+<!-- AngularFire -->
+<script src="https://cdn.firebase.com/libs/angularfire/2.0.2/angularfire.min.js"></script>
 
 </body>
 </html>
