--- a/app/login.html
+++ b/app/login.html
@@ -52,8 +52,10 @@
     <script src="js/jquery/jquery-2.1.1.min.js"></script>
     <script src="js/bootstrap/bootstrap.min.js"></script>
 
-    <script src="http://www.parsecdn.com/js/parse-latest.js"></script>
-    <script src="js/drop2books/parsehelper.js"></script>
+    <!-- Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/3.5.1/firebase.js"></script>
+    <script src="js/drop2books/firebase-helper.js"></script>
+
 </body>
 
 </html>
