--- a/app/register.html
+++ b/app/register.html
@@ -39,6 +39,9 @@
                     <input type="password" id="register-password" class="form-control" placeholder="Password" required="">
                 </div>
                 <div class="form-group">
+                    <input type="text" id="register-companyName" class="form-control" placeholder="Company Name" required="">
+                </div>
+                <div class="form-group">
                         <div class="checkbox i-checks"><label> <input type="checkbox" required=""><i></i> Agree the terms and policy </label></div>
                 </div>
                 <button type="submit" class="btn btn-primary block full-width m-b">Register</button>
@@ -64,8 +67,12 @@
         });
     </script>
 
-    <script src="http://www.parsecdn.com/js/parse-latest.js"></script>
-    <script src="js/drop2books/parsehelper.js"></script>
+    <!-- Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/3.5.1/firebase.js"></script>
+    <script src="js/drop2books/firebase-helper.js"></script>
+
+    <!-- <script src="http://www.parsecdn.com/js/parse-latest.js"></script>
+    <script src="js/drop2books/parsehelper.js"></script> -->
 
 </body>
 
